--- a/css/styles.css
+++ b/css/styles.css
@@ -54,9 +54,20 @@ img {
   padding-right: 15px;
   margin: 0 auto;
 }
+/* Uncertain but came with the svg files */
 
+.icon-fig-satellite {
+  width: 0.9423828125em;
+}
 /* Header */
-
+.header-icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: var(--accentbright);
+}
 .header-container {
   display: flex;
   align-items: center;
@@ -123,7 +134,7 @@ img {
   display: flex;
 }
 .header-contacts-item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 /* Footer */
@@ -279,7 +290,6 @@ img {
   line-height: 1.172;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
-  text-align: center;
 }
 
 .team-nametag {
@@ -298,19 +308,31 @@ img {
   color: var(--mainmid);
   letter-spacing: 0.03em;
   text-align: center;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   background-color: var(--mainbright);
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
 }
 .ourteam-container {
   display: flex;
 }
 .ourteam-items {
   background-color: var(--mainbright);
+  border-left: solid 1px var(--bordercolor);
+  border-right: solid 1px var(--bordercolor);
+  border-bottom: solid 1px var(--bordercolor);
+  box-shadow: 0px 2px 1px 0px var(--mainmid);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .ourteam-items:not(:last-child) {
   margin-right: 30px;
+}
+.social-icon-list {
+  display: flex;
+}
+.social-icon {
+  height: 20px;
+  width: 20px;
+  margin: 10px;
 }
 /* Portfolio Page */
 
