--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --accentbackground: #f5f4fa;
   --accentbox: #eeeeee;
   --bordercolor: #ececec;
+  --backgroundoverlay: #c4c4c4;
 }
 
 a:link:active {
@@ -181,10 +182,20 @@ img {
 /* Studio Page: Hero, Our Features, Our Team */
 
 /* Hero */
-
 .hero-section {
-  background-color: var(--footercolor);
+  width: 1600px;
+  height: 636px;
+  left: 0px;
+  top: 80px;
+}
+.hero-section {
+  background-color: rgba(47, 48, 58, 0.4);
   padding: 200px 0;
+  background-image: url(/assets/images/herobackgroundimg.jpg);
+  width: 1600px;
+  height: 636px;
+  left: 0px;
+  top: 80px;
 }
 
 .hero {
@@ -276,6 +287,7 @@ img {
 .whatwedo-items:not(:last-child) {
   margin-right: 30px;
 }
+
 /* Our Team */
 
 .ourteamback {
@@ -319,7 +331,8 @@ img {
   border-left: solid 1px var(--bordercolor);
   border-right: solid 1px var(--bordercolor);
   border-bottom: solid 1px var(--bordercolor);
-  box-shadow: 0px 2px 1px 0px var(--mainmid);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -364,6 +377,8 @@ img {
 .gallery-button:hover {
   background-color: var(--accentbright);
   color: var(--mainbright);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .my-project-list {
@@ -374,10 +389,14 @@ img {
 }
 .art-back {
   background-color: var(--mainbright);
-
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
+}
+.art-back:hover,
+.art-back:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .art-text {
