--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,7 @@ img {
 }
 .footer-sections {
   display: flex;
+  align-items: baseline;
 }
 .middle-footer-section {
   margin-left: 70px;
@@ -207,6 +208,7 @@ img {
   letter-spacing: 0.03em;
   font-size: 14px;
   font-style: normal;
+  margin-bottom: 20px;
 }
 .social-icon-footer-list {
   display: flex;
